HREPTWO-3088: Xinha image picker: add widget for horizontal align https://issues.onehippo.com/browse/HREPTWO-3088  - Fixed broken accordion in Dialog  - added widget for horizontal align  - fixed layout of dialog  - Added translations  - Fixed configuration for Xinha dialogs  - Added helper method for getting a propertyModel (resolves warning)
svn path=/hippo-ecm/trunk/; revision=19740

--- a/repository/package/skin/src/main/webapp/screen.css
+++ b/repository/package/skin/src/main/webapp/screen.css
@@ -515,11 +515,11 @@ background-image:url(images/box-blue2.png);}
 .hippo-root div.wicket-mask-dark{opacity: 0.5; background-image:url("images/transparent-back.png"); filter:alpha(opacity=0.5)}
 
 /* Picker General Styling */
-.hippo-picker{background: url("images/picker-back.png") repeat-y; height: 331px; border-bottom: 1px solid #afafaf}
+.hippo-picker{background: url("images/picker-back.png") repeat-y; height: 356px; border-bottom: 1px solid #afafaf}
 .hippo-picker-tree{width: 193px; float: left;} 
-.hippo-picker-tree .hippo-tree{height: 281px; width: 193px}
+.hippo-picker-tree .hippo-tree{height: 255px; width: 193px}
 .hippo-picker-list-details{height: 331px; margin-left: 194px; background: #ffffff url('images/silverBack3.png') repeat-x; width: auto; position: relative; overflow: auto}
-.hippo-picker-properties{clear:both; height: 35px; padding: 10px; margin-top:25px;}
+.hippo-picker-properties{clear:both; height: 35px; padding: 10px; margin-top:0px;}
 .hippo-picker .hippo-list-details .hippo-list-paging td{width: 630px; text-align: right;}
 .hippo-picker .hippo-window-form td input{width: 200px}
 
@@ -567,7 +567,7 @@ line-height: 18px;}
 
 /* Image Picker */
 .hippo-picker-properties label{float: left; margin-right: 5px; padding: 2px; line-height: 21px;}
-body .hippo-picker-properties input{border: 1px solid #afafaf; padding: 4px; line-height: 16px; background: url("images/hippo-window-input-back.png") no-repeat; width: 660px}
+body .hippo-picker-properties div.text-input input{border: 1px solid #afafaf; padding: 4px; line-height: 16px; background: url("images/hippo-window-input-back.png") no-repeat;width: 535px}
 .hippo-picker-list-details table tr th{padding: 1px; padding-left: 4px; padding-bottom: 2px; border: 1px solid #afafaf; border-right: 0px; border-bottom: none;}
 
 /* Referring documents */
@@ -1216,10 +1216,6 @@ table.hippo-list-documents > tbody {
 .hippo-accordion-unit-center {
   -ms-overflow: auto;
   overflow:auto;
-}
-
-.wicket-modal .hippo-accordion-unit-center {
-  height: 281px;
 }
 
 .hippo-accordion-unit-bottom {
